# tmc2240

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  macros.rs  spi.rs
src/registers/: adc.rs  direct_mode.rs  encoder.rs  general_config.rs  mod.rs  motor_driver.rs  velocity_dependent.rs
