[package]
name = "tmc2240"
version = "0.1.0"
authors = ["Adrian Wowk <adrian@adom.inc>"]
edition = "2021"
license = "MIT"

[dependencies]
bitfield = "0.17.0"
derive_more = { version = "1.0.0", features = ["into", "from"], default-features = false}
embedded-hal-async = { version = "1.0.0" }
num_enum = { version = "0.7.3", default-features = false }
paste = "1.0.15"
